<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/colorDialog"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"
        android:scaleType="center"
        android:text="@string/enter_password"
        android:textColor="@android:color/white"
        android:textSize="22dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_line_blue"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#009688" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:gravity="center_vertical|right"
        android:orientation="horizontal"
        android:paddingRight="40dp">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel2"
            android:textColor="#009688"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/enter"
            android:textColor="#009688"
            android:textSize="16dp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>