<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#F28F22"
        android:elevation="4dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_activity_title"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title"
            android:textColor="#ffffff"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/textView_currentUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:text="AAA"/>
        <FrameLayout
            android:id="@+id/coin_layout_tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="40dp"
            android:clipChildren="false"
            android:clipToPadding="false">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/daily_coinstatus_bg"/>
            <ImageView
                android:id="@+id/image_coin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/daily_coinstatus_coin"
                android:padding="0dp"
                android:background="@android:color/transparent" />
            <TextView
                android:id="@+id/textView_numCoinSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FEFEFE"
                android:textSize="35sp"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="15dp" />
        </FrameLayout>

    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#f7f7f7"
                android:padding="88dp"
                android:orientation="vertical">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/go_setting"
                    android:textAlignment="textStart"
                    android:paddingStart="85dp"
                    android:textSize="30sp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/xprize_about_button_setting"
                    android:textAllCaps="false"
                    android:onClick="onClickSetting"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textSize="30sp"
                    android:textColor="@android:color/white"
                    android:paddingStart="85dp"
                    android:background="@drawable/xprize_about_button_credits"
                    android:textAllCaps="false"
                    android:onClick="onClickUpload"
                    android:text="@string/btn_upload"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textSize="30sp"
                    android:textColor="@android:color/white"
                    android:paddingStart="85dp"
                    android:background="@drawable/xprize_about_button_credits"
                    android:textAllCaps="false"
                    android:onClick="onClickClearAppdata"
                    android:text="@string/btn_clear_appdata"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textSize="30sp"
                    android:textColor="@android:color/white"
                    android:paddingStart="85dp"
                    android:background="@drawable/xprize_about_button_credits"
                    android:textAllCaps="false"
                    android:onClick="onClickPretest"
                    android:text="@string/btn_pretest"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textSize="30sp"
                    android:textColor="@android:color/white"
                    android:paddingStart="85dp"
                    android:background="@drawable/xprize_about_button_credits"
                    android:textAllCaps="false"
                    android:onClick="onClickPosttest"
                    android:text="@string/btn_posttest"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textSize="30sp"
                    android:textColor="@android:color/white"
                    android:paddingStart="85dp"
                    android:background="@drawable/xprize_about_button_credits"
                    android:textAllCaps="false"
                    android:onClick="onClickChangeLanguage"
                    android:text="@string/btn_changeLanguage"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#f7f7f7"
                android:padding="88dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/ftp_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:hint="hostname"/>
                <EditText
                    android:id="@+id/ftp_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:hint="username"/>
                <EditText
                    android:id="@+id/ftp_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:inputType="textPassword"
                    android:hint="password"/>
                <EditText
                    android:id="@+id/ftp_port"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:hint="port"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textSize="30sp"
                    android:textColor="@android:color/white"
                    android:paddingStart="85dp"
                    android:background="@drawable/xprize_about_button_credits"
                    android:textAllCaps="false"
                    android:onClick="onClickSelectUser"
                    android:text="@string/select_user"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textSize="30sp"
                    android:textColor="@android:color/white"
                    android:paddingStart="85dp"
                    android:background="@drawable/xprize_about_button_credits"
                    android:textAllCaps="false"
                    android:onClick="onClickUnlockAll"
                    android:text="@string/unlock_all"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textSize="30sp"
                    android:textColor="@android:color/white"
                    android:paddingStart="85dp"
                    android:background="@drawable/xprize_about_button_credits"
                    android:textAllCaps="false"
                    android:onClick="onClickAddHundredStars"
                    android:text="@string/add_100_stars"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textSize="30sp"
                    android:textColor="@android:color/white"
                    android:paddingStart="85dp"
                    android:background="@drawable/xprize_about_button_credits"
                    android:textAllCaps="false"
                    android:onClick="onClickAddThousandStars"
                    android:text="@string/add_1000_stars"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>